Implements a new Context
The new context is implemented in the DataAccess layer. For this a new ApplicationUser was implemented.
The Startup was changed in order to use the new Context
The ManageController and AccountController are using the new ApplicationUser

--- a/src/RandomThoughts/RandomThoughts.csproj
+++ b/src/RandomThoughts/RandomThoughts.csproj
@@ -18,4 +18,9 @@
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\RandomThoughts.DataAccess\RandomThoughts.DataAccess.csproj" />
+    <ProjectReference Include="..\RandomThoughts.Domain\RandomThoughts.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
