Move the functionalities of UnitOfWork class to the BaseRepository
There a some issues in the latest release of EF Core when the app uses
2 DbContext. This was functional in versions before this and maybe a workaround
can be found, but in order to gain in time, the class was removed.

--- a/src/RandomThoughts.DataAccess/RandomThoughts.DataAccess.csproj
+++ b/src/RandomThoughts.DataAccess/RandomThoughts.DataAccess.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Repositories\Base\UnitOfWork.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\RandomThoughts.Domain\RandomThoughts.Domain.csproj" />
   </ItemGroup>
 
