Fixes references between projects and modify the .sln to move the Business to the .src folder

--- a/src/RandomThoughts.Business/RandomThoughts.Business.csproj
+++ b/src/RandomThoughts.Business/RandomThoughts.Business.csproj
@@ -5,8 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\src\RandomThoughts.DataAccess\RandomThoughts.DataAccess.csproj" />
-    <ProjectReference Include="..\src\RandomThoughts.Domain\RandomThoughts.Domain.csproj" />
+    <ProjectReference Include="..\RandomThoughts.DataAccess\RandomThoughts.DataAccess.csproj" />
+    <ProjectReference Include="..\RandomThoughts.Domain\RandomThoughts.Domain.csproj" />
   </ItemGroup>
 
 </Project>
