Uses the ThoughtHolesAppService in the Presentation layer

--- a/src/RandomThoughts/RandomThoughts.csproj
+++ b/src/RandomThoughts/RandomThoughts.csproj
@@ -26,6 +26,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\RandomThoughts.Business\RandomThoughts.Business.csproj" />
     <ProjectReference Include="..\RandomThoughts.DataAccess\RandomThoughts.DataAccess.csproj" />
     <ProjectReference Include="..\RandomThoughts.Domain\RandomThoughts.Domain.csproj" />
   </ItemGroup>
