--- a/tests/RandomThoughts.Test.Common/RandomThoughts.Test.Common.csproj
+++ b/tests/RandomThoughts.Test.Common/RandomThoughts.Test.Common.csproj
@@ -4,4 +4,10 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\RandomThoughts.Business\RandomThoughts.Business.csproj" />
+    <ProjectReference Include="..\..\src\RandomThoughts.DataAccess\RandomThoughts.DataAccess.csproj" />
+    <ProjectReference Include="..\..\src\RandomThoughts.Domain\RandomThoughts.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
