--- a/tests/RandomThoughts.Test.Common/RandomThoughts.Test.Common.csproj
+++ b/tests/RandomThoughts.Test.Common/RandomThoughts.Test.Common.csproj
@@ -5,6 +5,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.1.0-preview1-final" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.1.0-preview1-final" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SQLite" Version="2.1.0-preview1-final" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.1.0-preview1-final" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="2.1.0-preview1-final" />
+    <PackageReference Include="Microsoft.Data.SQLite" Version="2.1.0-preview1-final" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.1.0-preview1-final" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\src\RandomThoughts.Business\RandomThoughts.Business.csproj" />
     <ProjectReference Include="..\..\src\RandomThoughts.DataAccess\RandomThoughts.DataAccess.csproj" />
     <ProjectReference Include="..\..\src\RandomThoughts.Domain\RandomThoughts.Domain.csproj" />
