Implements unitTest class for the base methods in the BaseApplicationService
NOTE:
The tests are not passing because there is an issue in the creation of the DB. THe
column CreatedAt is being added to the tables. I don't konw the reason of this, because
this column DO exist in the AuditableAndTrackableEntity class.

--- a/tests/RandomThoughts.Business.Tests/RandomThoughts.Business.Tests.csproj
+++ b/tests/RandomThoughts.Business.Tests/RandomThoughts.Business.Tests.csproj
@@ -13,4 +13,11 @@
     <DotNetCliToolReference Include="dotnet-xunit" Version="2.3.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\RandomThoughts.Business\RandomThoughts.Business.csproj" />
+    <ProjectReference Include="..\..\src\RandomThoughts.DataAccess\RandomThoughts.DataAccess.csproj" />
+    <ProjectReference Include="..\..\src\RandomThoughts.Domain\RandomThoughts.Domain.csproj" />
+    <ProjectReference Include="..\RandomThoughts.Test.Common\RandomThoughts.Test.Common.csproj" />
+  </ItemGroup>
+
 </Project>
