--- a/src/RandomThoughts.DataAccess/RandomThoughts.DataAccess.csproj
+++ b/src/RandomThoughts.DataAccess/RandomThoughts.DataAccess.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20180425151034_AddComment.cs" />
     <Compile Remove="Repositories\Base\UnitOfWork.cs" />
   </ItemGroup>
 
