IMplements the User's seeds
Now we create a default user with:

- Email: admin@gmail.com
- Pass: admin123

NOTE:
We are calling the seeds from the Configure method for testing purpose,
this implementation wil be done in the SeedEngine library

--- a/src/RandomThoughts.DataAccess/RandomThoughts.DataAccess.csproj
+++ b/src/RandomThoughts.DataAccess/RandomThoughts.DataAccess.csproj
@@ -9,6 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\libraries\SeedEngine\SeedEngine.csproj" />
     <ProjectReference Include="..\RandomThoughts.Domain\RandomThoughts.Domain.csproj" />
   </ItemGroup>
 
