--- a/libraries/SeedEngine/SeedEngine.csproj
+++ b/libraries/SeedEngine/SeedEngine.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.1.0-preview2-final" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.1.0-preview1-final" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.1.0-preview1-final" />
+    <PackageReference Include="Serilog.AspNetCore" Version="2.1.1" />
 
   </ItemGroup>
 
