Add method PUT in api/controller. Bug in Edit ThoughtHole not fixed.

--- a/src/RandomThoughts/RandomThoughts.csproj
+++ b/src/RandomThoughts/RandomThoughts.csproj
@@ -33,6 +33,7 @@
 
   <ItemGroup>
     <Folder Include="Views\Shared\Thoughts\" />
+    <Folder Include="wwwroot\css\" />
   </ItemGroup>
 
 </Project>
