--- a/src/RandomThoughts/RandomThoughts.csproj
+++ b/src/RandomThoughts/RandomThoughts.csproj
@@ -20,7 +20,6 @@
     <PackageReference Include="Serilog.AspNetCore" Version="2.1.1" />
     <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
     <PackageReference Include="Serilog.Sinks.RollingFile" Version="3.3.1-dev-00771" />
-    <PackageReference Include="SmartSeeder" Version="0.0.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="2.4.0" />
   </ItemGroup>
 
@@ -33,10 +32,22 @@
     <ProjectReference Include="..\RandomThoughts.Business\RandomThoughts.Business.csproj" />
     <ProjectReference Include="..\RandomThoughts.DataAccess\RandomThoughts.DataAccess.csproj" />
     <ProjectReference Include="..\RandomThoughts.Domain\RandomThoughts.Domain.csproj" />
+    
+  </ItemGroup>
+
+  <ItemGroup>
+    <DotNetCliToolReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.1.0-preview1-final" />
+    <DotNetCliToolReference Include="Microsoft.EntityFrameworkCore.Tools.DotNet" Version="2.1.0-preview1-final" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Views\Shared\Thoughts\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="SeedEngine">
+      <HintPath>..\..\..\..\SeedEngine\bin\Release\netcoreapp2.0\SeedEngine.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
 </Project>
