Change the name of the database. It RandomThoughts from now on

--- a/src/RandomThoughts/appsettings.json
+++ b/src/RandomThoughts/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-RandomThoughts-FDA61334-42E3-476C-B9CE-98E500BE3A31;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=RandomThoughts;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "IncludeScopes": false,
