--- a/src/RandomThoughts.DataAccess/RandomThoughts.DataAccess.csproj
+++ b/src/RandomThoughts.DataAccess/RandomThoughts.DataAccess.csproj
@@ -22,6 +22,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools.DotNet" Version="2.1.0-preview1-final" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.1.0-rc1-final" />
     <PackageReference Include="NLipsum" Version="1.1.0" />
+    <PackageReference Include="SmartSeeder" Version="1.0.0-rc1-beta" />
 
   </ItemGroup>
     <ItemGroup>
@@ -30,7 +31,6 @@
 </ItemGroup>
     <ItemGroup>
       <Reference Include="SeedEngine">
-        <HintPath>..\..\..\..\SeedEngine\bin\Release\netcoreapp2.0\SeedEngine.dll</HintPath>
       </Reference>
     </ItemGroup>
 
