--- a/src/RandomThoughts/RandomThoughts.csproj
+++ b/src/RandomThoughts/RandomThoughts.csproj
@@ -20,6 +20,7 @@
     <PackageReference Include="Serilog.AspNetCore" Version="2.1.1" />
     <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
     <PackageReference Include="Serilog.Sinks.RollingFile" Version="3.3.1-dev-00771" />
+    <PackageReference Include="SmartSeeder" Version="1.0.0-rc1-beta" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="2.4.0" />
   </ItemGroup>
 
@@ -46,7 +47,6 @@
 
   <ItemGroup>
     <Reference Include="SeedEngine">
-      <HintPath>..\..\..\..\SeedEngine\bin\Release\netcoreapp2.0\SeedEngine.dll</HintPath>
     </Reference>
   </ItemGroup>
 
