--- a/src/RandomThoughts/ClientApp/RTClientApp/angular.json
+++ b/src/RandomThoughts/ClientApp/RTClientApp/angular.json
@@ -119,6 +119,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "RTClientApp"
+    }
+  },
+  "defaultProject": "RTClientApp",
+  "cli": {
+    "defaultCollection": "@nativescript/schematics"
+  }
 }
