--- a/src/RandomThoughts/RTClientApp/package.json
+++ b/src/RandomThoughts/RTClientApp/package.json
@@ -15,7 +15,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.1.2",
+    "@angular/animations": "^8.2.6",
     "@angular/cdk": "^8.2.0",
     "@angular/common": "~8.1.2",
     "@angular/compiler": "~8.1.2",
@@ -26,6 +26,7 @@
     "@angular/platform-browser-dynamic": "~8.1.2",
     "@angular/router": "~8.1.2",
     "@nativescript/schematics": "^0.7.1",
+    "hammerjs": "^2.0.8",
     "nativescript-angular": "~8.0.1",
     "nativescript-theme-core": "~1.0.4",
     "reflect-metadata": "~0.1.12",
