Exclude the clientSide project from VS build
VS what very slow and I'm developing the client side
in VS Code, so I excluded it from the VS build

--- a/src/RandomThoughts/RandomThoughts.csproj
+++ b/src/RandomThoughts/RandomThoughts.csproj
@@ -6,6 +6,13 @@
     <TypeScriptToolsVersion>3.5</TypeScriptToolsVersion>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Remove="RTClientApp\**" />
+    <Content Remove="RTClientApp\**" />
+    <EmbeddedResource Remove="RTClientApp\**" />
+    <None Remove="RTClientApp\**" />
+  </ItemGroup>
+
 
 
 
